--- a/package.json
+++ b/package.json
@@ -6,14 +6,15 @@
     "url": "git://github.com/spirinvladimir/connect-js-codec.git"
   },
   "scripts": {
-    "test": "ava",
+    "test": "nyc ava",
     "watch": "ava -w",
     "start": "npm run watch"
   },
   "devDependencies": {
     "ava": "0.18.2",
     "connect-js-adapter-tls": "spotware/connect-js-adapter-tls#v3.0.3",
+    "connect-js-encode-decode": "spotware/connect-js-encode-decode",
     "connect-protobuf-messages": "spotware/connect-protobuf-messages#v2.0.0",
-    "connect-js-encode-decode": "spotware/connect-js-encode-decode"
+    "nyc": "10.2.0"
   }
 }
